fix: zookeeper 3.4 gc opt (#1938)
(cherry picked from commit 79451eb7e7764b499ad1820396dd269e98975e0c)